--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,15 +1,28 @@
-<!-- | を囲って書式設定(表示値の加工を行う) -->
-<h2>{{ hero.name | uppercase }} Detail</h2>
-<div>
-  <span>
-    id:
-  </span>
-  {{ hero.id }}
+<!-- *ngIf="条件" 条件によって表示非表示を切り替える  -->
+<div *ngIf="selectedHero">
+  <!-- | を囲って書式設定(表示値の加工を行う) -->
+  <h2>{{ selectedHero.name | uppercase }} Details</h2>
+  <div><span>id: </span>{{ selectedHero.id }}</div>
+  <div>
+    <label
+      >name:
+      <input [(ngModel)]="selectedHero.name" placeholder="name" />
+    </label>
+  </div>
 </div>
-<div>
-  <label
-    >name:
-    <!-- [(ngModel)] は、Angularの双方向データバインディング構文 -->
-    <input [(ngModel)]="hero.name" placeholder="name" />
-  </label>
-</div>
+<h2>My Heroes</h2>
+<ul class="heroes">
+  <!-- *ngFor="let item of items" 繰り返し  -->
+  <!--  (イベント)="イベントハンドラー" イベントハンドラーをセット -->
+  <!-- [class.クラス名]="条件" クラスバインディング -->
+  <li
+    *ngFor="let hero of heroes"
+    (click)="onSelect(hero)"
+    [class.selected]="hero === selectedHero"
+  >
+    <span class="badge">
+      {{ hero.id }}
+    </span>
+    {{ hero.name }}
+  </li>
+</ul>
