--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,15 +1,3 @@
-<!-- *ngIf="条件" 条件によって表示非表示を切り替える  -->
-<div *ngIf="selectedHero">
-  <!-- | を囲って書式設定(表示値の加工を行う) -->
-  <h2>{{ selectedHero.name | uppercase }} Details</h2>
-  <div><span>id: </span>{{ selectedHero.id }}</div>
-  <div>
-    <label
-      >name:
-      <input [(ngModel)]="selectedHero.name" placeholder="name" />
-    </label>
-  </div>
-</div>
 <h2>My Heroes</h2>
 <ul class="heroes">
   <!-- *ngFor="let item of items" 繰り返し  -->
@@ -26,3 +14,5 @@
     {{ hero.name }}
   </li>
 </ul>
+<!-- [プロパティ]="渡す値" プロパティバインディング-->
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
