--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -9,6 +9,9 @@
       <input [(ngModel)]="hero.name" placeholder="name" />
     </label>
   </div>
+  <button (click)="save()">
+    save
+  </button>
   <button (click)="goBack()">
     go back
   </button>
