--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,14 +1,25 @@
 <h2>My Heroes</h2>
+
+<div>
+  <label
+    >Hero name:
+    <input #heroName />
+  </label>
+  <!-- (click) 入力値をadd()に渡したあと、入力をクリアする -->
+  <button (click)="add(heroName.value); heroName.value = ''">
+    add
+  </button>
+</div>
+
 <ul class="heroes">
   <!-- *ngFor="let item of items" 繰り返し  -->
   <!--  (イベント)="イベントハンドラー" イベントハンドラーをセット -->
   <!-- [class.クラス名]="条件" クラスバインディング -->
   <li *ngFor="let hero of heroes">
-    <a routerLink="/detail/{{hero.id}}">
-      <span class="badge">
-        {{ hero.id }}
-      </span>
-      {{ hero.name }}
-    </a>
-  </li>
+      <a routerLink="/detail/{{hero.id}}">
+        <span class="badge">{{hero.id}}</span> {{hero.name}}
+      </a>
+      <button class="delete" title="delete hero"
+      (click)="delete(hero)">x</button>
+    </li>
 </ul>
